# Research-Project-ISAE

./: README.md  RP Daily log.xlsx  Rate_Optimization (incomplete).m
My reports/: PresentationRP_March_23 (1).xlsx  S2 Progress Report.docx  S2 progress presentation.pptx
PX4_files/launch/: mavros_posix_sitl_arav.launch  mavros_posix_sitl_dd_bot.launch  mavros_posix_sitl_luffy.launch  posix_sitl_dd_bot.launch  posix_sitl_luffy.launch
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/beginner_tutorials/: build.cmake.004.log.stderr  build.make.282.log.stderr  build.make.283.log.stderr
catkin_ws/logs/costmap_2d/: build.cmake.000.log.stderr
catkin_ws/logs/dd_bot/: build.cmake.037.log.stderr
catkin_ws/logs/epm/: build.cmake.006.log.stderr  build.make.210.log.stderr
catkin_ws/logs/gazebo_msgs/: build.make.151.log.stderr
catkin_ws/logs/gazebo_plugins/: build.cmake.022.log.stderr
catkin_ws/logs/gazebo_ros/: build.cmake.032.log.stderr
catkin_ws/logs/gazebo_ros_control/: build.cmake.015.log.stderr
catkin_ws/logs/global_planner/: build.cmake.001.log.stderr  build.cmake.002.log.stderr
catkin_ws/logs/map_server/: build.cmake.001.log.stderr
catkin_ws/logs/mavlink/: build.cmake.000.log.stderr
catkin_ws/logs/mavros_msgs/: build.make.151.log.stderr
catkin_ws/logs/mrs_lib/: build.cmake.000.log.stderr
catkin_ws/logs/mrs_msgs/: build.check.005.log.stderr
catkin_ws/logs/mrs_subt_planning_lib/: build.cmake.015.log.stderr
catkin_ws/logs/octomap_server/: build.cmake.008.log.stderr  build.cmake.009.log.stderr
catkin_ws/logs/path_planning/: build.check.131.log.stderr  build.check.132.log.stderr  build.check.133.log.stderr  build.check.134.log.stderr  build.check.135.log.stderr  build.check.136.log.stderr  build.check.146.log.stderr  build.check.148.log.stderr  build.check.149.log.stderr  build.check.150.log.stderr  build.check.151.log.stderr  build.check.152.log.stderr  build.check.153.log.stderr  build.check.154.log.stderr  build.check.156.log.stderr  build.check.157.log.stderr  build.check.158.log.stderr  (+114 more)
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/Alberto_and_Joan/path_planning/: CMakeLists.txt  package.xml
catkin_ws/src/Alberto_and_Joan/path_planning/code/: Astar_caller.cpp  path_planning_node.cpp
catkin_ws/src/Alberto_and_Joan/path_planning/launch/: launch.xml
(+3643 files in other folders)
